change fetch logic